# realrestore-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SKILL.md
docs/research/: ane-offloading.md  apple-silicon-latest-2026.md  black-output-investigation.md  github-mps-solutions.md  innovative-speedups-2026.md  large-model-memory-2026.md  latest-quantization-2026.md  memory-optimization.md  mlx-conversion.md  mps-optimizations.md  proven-mps-implementations.md  quality-investigation.md  quantization.md  watermark-removal.md  x-quality-preserving-speed.md  x-twitter-optimization-posts.md
docs/reviews/: codex-architecture-review.md  codex-black-output-analysis.md  codex-innovations-review.md  codex-optimization-deep-dive.md  codex-proven-fix.md  codex-quality-analysis.md  gemini-architecture-review.md  gemini-innovations-review.md  gemini-optimization-deep-dive.md  gemini-proven-fix.md  gemini-review-output.txt
docs/superpowers/specs/: 2026-03-29-realrestore-cli-design.md
patches/: 001-fix-hardcoded-bfloat16.patch  001-mps-compatibility.patch
python/: requirements.txt
python/realrestore_cli/: __init__.py  daemon.py  engine.py  setup.py
python/realrestore_cli/benchmarks/: __init__.py  __main__.py  runner.py
python/realrestore_cli/optimizations/: __init__.py  auto_detect.py  mlx_backend.py  mps_backend.py  quantize.py  scheduling.py  tiling.py  warmup.py
python/realrestore_cli/watermark/: __init__.py  __main__.py  detector.py  remover.py
src/: main.rs
tests/: test_e2e.py  test_optimizations.py
