[package]
name = "realrestore-cli"
version = "0.1.0"
edition = "2021"
description = "Agent-friendly image restoration CLI optimized for Apple Silicon"
license = "MIT"
repository = "https://github.com/199-biotechnologies/realrestore-cli"
keywords = ["image-restoration", "apple-silicon", "cli", "ai", "diffusion"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "realrestore"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
comfy-table = "7"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2", "rustls"] }
which = "7"
dirs = "6"
